--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~7.0.0",
     "bootstrap": "^5.0.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.3.3",
     "sass": "^1.34.0",
     "zone.js": "~0.8.26"
